Adicionado imagem de fundo. e corrigindo alguns bugs

--- a/style.css
+++ b/style.css
@@ -4,19 +4,33 @@ body{
     background-image: url(./assets/fundo-1.jpg);
 }
 
+/* Container do curriculo */
 .curriculo-container{
     background-color: rgb(0, 0, 0, 0.75);
-    
-    
     margin:0 auto;
     padding:20px;
     width:500px;
     border: 2px solid aqua;
     box-shadow: 0 0 15px aqua;
-    opacity: 0px;
+    
 }
 
-h1, h3, p, li {
+/* Cores dos textos, titulos, listas e a tag ancora */
+h1, h3, p, li , a{
     color:aqua;
     text-shadow: 0 0 15px aqua;
+}
+
+/* estilo da tag ancora */
+.dados_pessoais  a{
+  text-decoration: none;
+
+}
+
+.dados_pessoais  a:visited{
+    text-decoration: none;
+}
+
+ul{
+    list-style-type: square;
 }
