--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body{
     background-color: black;
     color:white;
     background-image: url(./assets/fundo-1.jpg);
+    /* Fonte Personalizada */
+    font-family: 'Share Tech', sans-serif;
+    font-size: 20px;
 }
 
 /* Container do curriculo */
@@ -9,7 +12,7 @@ body{
     background-color: rgb(0, 0, 0, 0.75);
     margin:0 auto;
     padding:20px;
-    width:500px;
+    width:550px;
     border: 2px solid aqua;
     box-shadow: 0 0 15px aqua;
     
