--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@ body{
     
     /* Fonte Personalizada */
     font-family: 'Share Tech', sans-serif;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 /* Container do curriculo */
 .curriculo-container{
     background-color: rgb(0, 0, 0, 0.75); /*Cor de fundo transparente do curriculo*/
-    margin:0 auto;
+    margin:auto;
     padding:20px;
-    width:550px;
+   width: 40%;
     border: 2px solid aqua; /*Cor e efeito NEON do Curriculo*/
     box-shadow: 0 0 15px aqua; 
 }
@@ -32,9 +32,6 @@ h1, h3, p, li , a{
   text-decoration: none;
   color:aquamarine;
   text-shadow: 0 0 15px aquamarine;
-}
-.dados_pessoais  a:visited{
-    text-decoration: none;
 }
 
 /* Lista */
@@ -52,6 +49,6 @@ li{
     padding-left: 15px;
 }
 
-
+/* Responsividade */
 
 
